--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,10 @@ GitHub.sublime-settings
 migrations/
 static_cdn/
 
+email = user_form.cleaned_data.get('email')
+            raw_password = user_form.cleaned_data.get('password1')
+            user = authenticate(email=email, password=raw_password)
+            if user is not None:
+                login(request, user)
+                return redirect('dashboard')
+
