--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cryptography==2.7
 Django==2.2.4
 django-pusherable==0.2.0
 django-widget-tweaks==1.4.5
+gunicorn==19.9.0
 idna==2.8
 isort==4.3.21
 lazy-object-proxy==1.4.1
