--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,38 @@ sqlparse==0.3.0
 typed-ast==1.4.0
 urllib3==1.25.3
 wrapt==1.11.2
+asn1crypto==0.24.0
+astroid==2.2.5
+autopep8==1.4.4
+certifi==2019.6.16
+cffi==1.12.3
+chardet==3.0.4
+cryptography==2.7
+Django==2.2.4
+django-pusherable==0.2.0
+django-widget-tweaks==1.4.5
+gunicorn==19.9.0
+idna==2.8
+isort==4.3.21
+lazy-object-proxy==1.4.1
+mccabe==0.6.1
+mysqlclient==1.4.6
+ndg-httpsclient==0.5.1
+psycopg2==2.8.3
+pusher==2.1.4
+pyasn1==0.4.6
+pycodestyle==2.5.0
+pycparser==2.19
+pylint==2.3.1
+pylint-django==2.0.11
+pylint-plugin-utils==0.5
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
+python-decouple==3.1
+pytz==2019.2
+requests==2.22.0
+six==1.12.0
+sqlparse==0.3.0
+typed-ast==1.4.0
+urllib3==1.25.3
+wrapt==1.11.2
